<resources>
    <string name="app_name">OnlabProject</string>
    <string name="login">Login</string>
    <string name="no_account">Not a member? Sign up now!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="email_error">Email cannot be empty</string>
    <string name="password_error">Password cannot be empty</string>
    <string name="title_activity_items">ItemsActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="nickname">Nickname</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="already_a_member">Already a member? Login</string>
    <string name="create_account">Create account</string>
    <string name="action_logout">Logout</string>
    <string name="start_price">Start price</string>
    <string name="description">Description</string>
    <string name="bid_expiry">Bid expiry</string>
    <string name="new_item">New item</string>
    <string name="current_bid">Current bid</string>
    <string name="bid_expires">Bid expires</string>
    <string name="item_description">Description</string>
    <string name="place_bid">Place bid</string>
    <string name="your_bid">Your bid</string>
    <string name="change_email">Change email</string>
    <string name="change_password">Change password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="passwords_not_match">The two passwords do not match!</string>
    <string name="something_went_wrong">Something went wrong, please try again!</string>
    <string name="password_changed">Password successfully changed!</string>
    <string name="wrong_old_password">Wrong old password!</string>
    <string name="fill_out">Please fill out this field!</string>
    <string name="old_email">Old email</string>
    <string name="new_email">New email</string>
    <string name="email_updated">Email successfully updated!</string>
    <string name="wrong_password">Wrong password!</string>
    <string name="email_update_failed">Email update failed! The email address may be taken by another user. Please try again with a different email address!</string>
    <string name="ongoing_bids">Ongoing bids</string>
    <string name="items_won">Items won</string>
    <string name="close_bid">Close bid</string>
    <string name="closed_bids">Closed bids</string>
    <string name="my_items">My items</string>
    <string name="my_bids">My bids</string>
    <string name="profile">Profile</string>
    <string name="items">Items</string>
    <string name="more">More</string>
    <string name="start_delivery">Start delivery</string>
    <string name="deliveries">Deliveries</string>
    <string name="check_status">Check status</string>
    <string name="title_activity_maps">Map</string>
    <string name="successfull_bid">Successful bid!</string>
    <string name="lower_than_highest">You cannot place a lower bid, than the current highest bid!</string>
    <string name="lower_than_starting">You cannot place a lower bid, than the starting price!</string>
    <string name="bid_closed">The bid is now closed. You can check this bid at the \'My items\' page!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="address_empty">Address cannot be empty</string>
    <string name="nickname_empty">Nickname cannot be empty</string>
    <string name="signup_failed">Signup failed, please try again!</string>
    <string name="password_too_short">Password must be at least 6 characters long</string>
</resources>
