<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <ImageView
            android:id="@+id/itemImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:src="@drawable/placeholderimage" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/itemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/expiry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/itemName"
                android:layout_marginTop="10dp"
                android:layout_toLeftOf="@+id/expiryText"
                android:textSize="13sp" />

            <TextView
                android:id="@id/expiryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/itemName"
                android:layout_marginTop="10dp"
                android:text="@string/bid_expires"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/startPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/expiry"
                android:layout_marginTop="10dp"
                android:layout_toLeftOf="@+id/startPriceText"
                android:textSize="13sp" />

            <TextView
                android:id="@id/startPriceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/expiryText"
                android:layout_marginTop="10dp"
                android:text="@string/start_price"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/currentBid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/startPrice"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@+id/currentBidText"
                android:gravity="end"
                android:textSize="13sp" />

            <TextView
                android:id="@id/currentBidText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/startPriceText"
                android:layout_marginTop="10dp"
                android:text="@string/current_bid"
                android:textSize="13sp" />


        </RelativeLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>